--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,4 +62,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Radio Buttons" />
+
+    <Button
+        android:id="@+id/toggle"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Toggle" />
 </LinearLayout>
