--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,4 +69,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Toggle" />
+
+    <Button
+        android:id="@+id/spinner"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Spinner" />
 </LinearLayout>
