--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -10,70 +10,88 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/image1"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:contentDescription="image1"
-        android:scaleType="fitCenter"
-        app:srcCompat="@drawable/rickandmorty" />
-
-    <EditText
-        android:id="@+id/editTextText"
-        android:layout_width="300dp"
+    <LinearLayout
+        android:id="@+id/main"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:background="@color/white"
-        android:backgroundTint="#F5F6F4"
-        android:ems="10"
-        android:hint="Please enter your name"
-        android:inputType="text"
-        android:textColor="@color/black" />
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingBottom="50dp">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:backgroundTint="#EDE8E8"
-        android:text="Submit"
-        android:textColor="#1F975D" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:background="@color/white"
-        android:gravity="center"
-        android:text="Result"
-        android:textColor="@color/black" />
+        <ImageView
+            android:id="@+id/image1"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:contentDescription="image1"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/rickandmorty" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="CheckBox" />
+        <EditText
+            android:id="@+id/editTextText"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:background="@color/white"
+            android:backgroundTint="#F5F6F4"
+            android:ems="10"
+            android:hint="Please enter your name"
+            android:inputType="text"
+            android:textColor="@color/black" />
 
-    <Button
-        android:id="@+id/radio"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Radio Buttons" />
+        <Button
+            android:id="@+id/button"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:backgroundTint="#EDE8E8"
+            android:text="Submit"
+            android:textColor="#1F975D" />
 
-    <Button
-        android:id="@+id/toggle"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Toggle" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:background="@color/white"
+            android:gravity="center"
+            android:text="Result"
+            android:textColor="@color/black" />
 
-    <Button
-        android:id="@+id/spinner"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Spinner" />
-</LinearLayout>
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="CheckBox" />
+
+        <Button
+            android:id="@+id/radio"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Radio Buttons" />
+
+        <Button
+            android:id="@+id/toggle"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Toggle" />
+
+        <Button
+            android:id="@+id/spinner"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Spinner" />
+
+        <Button
+            android:id="@+id/toolbar"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Tool Bar" />
+
+    </LinearLayout>
+</ScrollView>
